--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>gsi</title>
+    <!-- Added: custom favicon -->
+    <link rel="icon" type="image/png" href="/white_logo_black_background.png" />
   </head>
 
   <body>
